--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     sdk: flutter
   eggnstone_dart: ^1.4.1
   freezed_annotation: ^3.0.0
+  intl: ^0.20.2
   kt_dart: ^1.1.0
 
 dev_dependencies:
