--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: eggnstone_charts
-copyright: 2024-2025 Mark Eggenstein
-description: A simple charts library.
+copyright: "2024-2025 Software-Entwicklung Eggenstein"
+description: "A simple charts library."
 homepage: https://github.com/eggnstone/eggnstone_charts
 
 version: 0.1.1
@@ -17,6 +17,8 @@ dependencies:
   kt_dart: ^1.1.0
 
 dev_dependencies:
+  flutter_test:
+    sdk: flutter
   build_runner: ^2.4.15
   freezed: ^3.0.6
   test: any
