Reworking data tip.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: eggnstone_charts
 copyright: "2024-2025 Software-Entwicklung Eggenstein"
-description: "A simple charts library."
+description: "A simple charts library. A simple charts library. A simple charts library."
 homepage: https://github.com/eggnstone/eggnstone_charts
 
 version: 0.1.3
