--- a/widgetbook/pubspec.yaml
+++ b/widgetbook/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   eggnstone_charts:
     path: ../
+  eggnstone_dart: any
   intl: ^0.20.2
   widgetbook: ^3.14.2
   widgetbook_annotation: ^3.5.0
